manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: i4talent-service
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8881
      targetPort: 5005
